--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/HUNTING_CUBE
 jdbc.username=root
-jdbc.password=root
-#jdbc.password=P0t3nt!@l
+#jdbc.password=root
+jdbc.password=P0t3nt!@l
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
